# wasm-efficient-interface

./: .gitignore  LICENSE  README.md  flake.nix
app/: Cargo.toml
app/src/: bindings.rs  lib.rs
app/wit/: world.wit
app_native/: Cargo.toml
app_native/src/: main.rs
host/: Cargo.toml
host/src/: bindings.rs  main.rs  memory_reader.rs  memory_reader_import_impl.rs
interface/: world.wit
random-file/: Cargo.toml
random-file/src/: main.rs
